# 3DViewer_CPP_2.0

./: CMakeLists.txt  main.cpp
model/: model.cc  model.h  parser.cc  parser.h
model/parser/: parser.cc  parser.h
model/transformer/: affine_transformer.cc  affine_transformer.h
view/: 3DViewer_CPP_2_0.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  render.cpp  render.h
view/3DViewer_CPP_2_0/: QGLWidget.cpp  mainwindow.h  mainwindow.ui  qglwidget.h  render.cpp  render.h
view/build-3DViewer_CPP_2_0-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_QGLWidget.cpp  moc_mainwindow.cpp  moc_render.cpp  ui_mainwindow.h
view/build-3DViewer_CPP_2_0-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
view/build-3DViewer_CPP_2_0-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QGLWidget.cpp.F1B9C573302732F4.idx  QGLWidget.h.265CE39374703236.idx  __locale.2D32E9862A6228BF.idx  __mutex_base.B72617C8B799451C.idx  __stddef_max_align_t.h.14EF9CFB16DE31BA.idx  __stddef_max_align_t.h.57806D000DF62222.idx  __stddef_max_align_t.h.6BDEC73916F4C991.idx  __stddef_max_align_t.h.D6BB4656C254BD59.idx  __stddef_max_align_t.h.E445784107FEFF3A.idx  __stddef_max_align_t.h.E492454E02954DAE.idx  __stddef_max_align_t.h.F4704E5180430902.idx  adxintrin.h.33434EE54DF3FBAB.idx  (+281 more)
view/build-3DViewer_CPP_2_0-Desktop_x86_darwin_generic_mach_o_64bit-Debug/3DViewer_CPP_2_0.app/Contents/: Info.plist
view/build-3DViewer_CPP_2_0-Desktop_x86_darwin_generic_mach_o_64bit-Debug/3DViewer_CPP_2_0.app/Contents/MacOS/: 3DViewer_CPP_2_0
